Korekta grafiznej strony i poprawki rwd

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Lista To Do</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<section class="app">
-		<h1>MOJA LISTA<br>TO DO</h1>
+		<div class="tittle">
+			<h1>MOJA LISTA</h1>
+			<p>TO DO</p>
+		</div>
+
 		<input type="text" placeholder="to do ...">
 		<div id="buttons" class="flex">
 			<button class="btn add">Add</button>
