--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 
 </body>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="script.js"></script>
 
 </html>
