--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
 
 </body>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 
 </html>
